--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">PAM-UserInput</string>
     <string name="submit">Submit</string>
+    <string name="judul">Formulir Pendaftaran</string>
 </resources>
